--- a/plugins/tor/layout/main.xml
+++ b/plugins/tor/layout/main.xml
@@ -106,10 +106,10 @@
 
         <label size="3" text="Bridge"/>
         <formline text="Active:">
-            <checkbox id="bridge_active"/>
+            <checkbox id="bridge_active" />
         </formline>
-        <formline text="Address:">
-            <textinput id="node_pol" placeholder="policy"/>
+        <formline text="Address:" help="IP:ORPort [fingerprint]">
+            <textinput id="bridge_addr"/>
         </formline>
     </dialogbox>
 
@@ -158,10 +158,10 @@
 
         <label size="3" text="Bridge relay"/>
         <formline text="Active?" help="Bridge relays (or 'bridges') are Tor relays that aren't listed in the main directory. Since there is no complete public list of them, even an ISP that filters connections to all the known Tor relays probably won't be able to block all the bridges. Also, websites won't treat you differently because they won't know you're running Tor. If you can be a real relay, please do; but if not, be a bridge!">
-            <checkbox id="bridge"/>
+            <checkbox id="bridge" />
         </formline>
         <formline text="Publish Server Descriptor" help="By default, Tor will advertise your bridge to users through various mechanisms like https://bridges.torproject.org/. If you want to run a private bridge, for example because you'll give out your bridge address manually to your friends, uncheck this.">
-            <checkbox id="pubservdescriptor" checked="1"/>
+            <checkbox id="pubservdescriptor" />
         </formline>
 
     </dialogbox>
